Fix centering on smaller devices

--- a/src/components/Burger/CheckoutSummary/CheckoutSummary.css
+++ b/src/components/Burger/CheckoutSummary/CheckoutSummary.css
@@ -3,9 +3,3 @@
     text-align: center;
     margin: auto;
 }
-
-@media (min-width: 600px) {
-    .CheckoutSummary {
-        width: 400px;
-    }
-}
